@@ -2118,48 +2118,54 @@ Font opens a font selection dialog which allows you to select the font to be use
 <td valign="top">
 <a name="devices-kernpoll"/><a href="#devices-kernpoll"><font size=+2>How To Enable Kernel Polling </font></a>
 <!-- @Devices @How To Enable Kernel Polling #kernpoll -->
-<p>When using SpaceFM without udisks, and without the udisks-daemon running, you may need to enable kernel polling for device media changes to be detected.  For example, if you insert a CD and SpaceFM still says 'no media', this is a symptom that kernel polling is not enabled.
+<p>You may need to enable kernel polling for device media changes to be detected by SpaceFM.  For example, if you insert a CD and SpaceFM still says 'no media', this is a symptom that kernel polling is not enabled.
 
-<p>Kernel polling is a new feature of the Linux kernel and udev, so most distros don't yet have it enabled.  Even if you are using udisks, enabling kernel polling is recommended to eliminate the need for udisks to do userspace polling.  Kernel polling also corrects a common issue where the eject button on a drive won't respond with the newer udev when udisks is not used.
+<p>Kernel polling is a newer feature of the Linux kernel and udev, so some distros don't yet have it enabled by default.  To use kernel polling, your Linux kernel may need to be <b>2.6.38 or newer</b>, and udev may need to be <b>version 173</b> or newer.
 
-<p>To use kernel polling, your Linux kernel needs to be <b>2.6.38 or newer</b>, and udev must be <b>version 173</b> or newer.
-
-<p>You can deterime if kernel polling is enabled by running these commands:
+<p>To determine if kernel polling is enabled:
 <pre>
     cat /sys/module/block/parameters/events_dfl_poll_msecs
     cat /sys/block/sr0/events_poll_msecs
 </pre>
 
-If you get 0 or -1 from those commands, then it's probably disabled.
+If you get 0 or -1 from both of those commands, kernel polling may be disabled.
 
-<p><b>To enable kernel polling temporarily</b>, enable common polling for the block module:
+<p><b>To enable kernel polling permanently</b> (survives a reboot), add the following command to your <b>/etc/rc.local</b> file (anywhere before the 'exit' line in that file):
 <pre>
-    sudo bash -c 'echo 2000 > /sys/module/block/parameters/events_dfl_poll_msecs'
+    echo 2000 > /sys/module/block/parameters/events_dfl_poll_msecs
 </pre>
 
 Any number between 2000 and 5000 (milliseconds) should be reasonable - the higher 5000 means poll every 5 seconds, which is less overhead but a little slower.
+
+<p><b>OR</b> pass this option to the kernel boot command line in grub:
+<blockquote>
+    <i>block.events_dfl_poll_msecs=2000</i>
+</blockquote>
+
+<p><b>OR</b> add a udev rule to enable kernel polling on removable devices:<br>
+<blockquote><code>
+    echo 'ACTION=="add", ATTR{removable}=="1", ATTR{events_poll_msecs}=="-1", ATTR{events_poll_msecs}="2000"' > /etc/udev/rules.d/61-removable-storage-polling.rules
+</code></blockquote>
+
+<p>A reboot will be required for the above changes to take effect, or...
+
+<p><b>To enable kernel polling temporarily and immediately</b>, enable common polling for the block module:
+<pre>
+    sudo bash -c 'echo 2000 > /sys/module/block/parameters/events_dfl_poll_msecs'
+</pre>
 
 <p><b>OR</b> you can enable polling just for a single device like this (/dev/sr0 in this example):
 <pre>
     sudo bash -c 'echo 2000 > /sys/block/sr0/events_poll_msecs'
 </pre>
 
-The change should be immediate - media will be detected and the eject button on the drive should work normally again.  However, the above changes will be lost when you reboot.
+This change should be immediate - media will be detected.  However, the above change will be lost when you reboot.
 
-<p><b>To make polling permanent</b> (survives a reboot), add one of the above commands to your <b>/etc/rc.local</b> file (anywhere before the 'exit' line in that file), like this (without the sudo):
-<pre>
-    echo 2000 > /sys/module/block/parameters/events_dfl_poll_msecs
-</pre>
-
-<b>OR</b> you can pass this option to the kernel boot command line in grub:
-<blockquote>
-    <i>block.events_dfl_poll_msecs=2000</i>
-</blockquote>
-
-References:<br>
-<a href="http://www.mail-archive.com/lfs-dev@linuxfromscratch.org/msg15714.html">linuxfromscratch.org/msg15714.html</a><br>
+<p>References:<br>
+<a href="http://www.mail-archive.com/lfs-dev@linuxfromscratch.org/msg15714.html">linuxfromscratch.org</a><br>
 <a href="http://blogs.gentoo.org/mgorny/2011/06/20/uam-can-now-mount-cds-and-dvds/">uam-can-now-mount-cds-and-dvds</a><br>
 <a href="https://bugs.archlinux.org/task/25609">bugs.archlinux.org</a><br>
+<a href="http://unix.stackexchange.com/questions/38582/udev-triggers-are-not-firing-on-insert-of-cf-card-into-usb-card-reader-anymore">unix.stackexchange.com</a><br>
 
 
 
@@ -6938,7 +6944,7 @@ Additional MIME types provided by libmimetype, adding globs for some missing but
 
 <p>DISCLAIMER:  While the authors, copyright holders, and maintainers of this software endeavour to keep all content up to date and valuable, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the software or the information, communications, products, services, or related graphics for any purpose. Any reliance you place on such content is therefore strictly AT YOUR OWN RISK.<br>
 <br>
-<p>Updated 2013-12-06&nbsp;&nbsp;(SpaceFM version 0.9.2)
+<p>Updated 2013-12-23&nbsp;&nbsp;(SpaceFM version 0.9.2+)
 <br><br>
 </center>
 </td></tr></table>
