@@ -2,6 +2,7 @@
     fix memory leak on draw selection rectangle on desktop #397
     [Dialog] fix returned windowsize=1x1 [GTK 3.8+]
     fix maximized panel sliders not restored #402
+    README, man: update kernel polling instructions #403
 0.9.2   2013-12-06:
     README correct packages link
     manual note full/max col widths not saved #382
